# meow-decoder

./: .coverage  .coveragerc-security  .editorconfig  .flake8  .gitignore  =1.5.0  AUDITOR_README.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CRYPTO_SECURITY_REVIEW.md  Cargo.toml  Dockerfile  FIX_SUMMARY.md  LICENSE  MANIFEST.in  MEOW-DECODER CRYPTOGRAPHIC SPECIFICATI.md  Makefile  PRIORITY_5_2_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  README1.md  RELEASE_v5.4.0.md  SECURITY.md  SECURITY_BOUNTY.md  SESSION_HANDOFF_2026-01-29.md  STABILITY_TIERS.md  SUPPORT.md  WORKFLOW_FIXES_SUMMARY.md  WORKFLOW_FIX_COMPLETE.md  cat_utils.py  catnip_fountain.py  ci-smoke.txt  cleanuptests.md  clowder_encode.py  commit_workflow_fixes.sh  config.py  crypto_enhanced.py  debug_decode.py  debug_hmac_fs.py  (+44 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release.yml
.github/  workflows/: ci.yml
.github/workflows/: ci.yml  cleanup.yml  codeql.yml  copilot-instructions.md  fast-ci.yml  formal-verification.yml  fuzz.yml  rust-crypto.yml  security-ci.yml
assets/: BRANDING.md
crypto_core/: Cargo.toml  README.md
crypto_core/benches/: crypto_benchmarks.rs
crypto_core/src/: aead_wrapper.rs  hsm.rs  lib.rs  nonce.rs  pure_crypto.rs  tpm.rs  types.rs  verus_kdf_proofs.rs  verus_proofs.rs  wasm.rs  yubikey_piv.rs
crypto_core/tests/: hsm_integration.rs  security_properties.rs  tpm_integration.rs  yubikey_integration.rs
docs/: 10-10_ROADMAP.md  ARCHITECTURE.md  AUDIT_OUTREACH.md  AUDIT_REPORT_2026-01-28.md  BADGE_SETUP.md  Meow_Decoder_Security_Audit_Grok.md  PROTOCOL.md  PROTOCOL_DIAGRAMS.md  RELEASE_INTEGRITY.md  ROADMAP.md  SCHRODINGER.md  SCHRODINGER_REFACTOR_REPAIR_SUMMARY.md  SCHRODINGER_REFACTOR_SECURITY_VERIFICATION.md  SECURITY_ASSUMPTIONS.md  SECURITY_AUDIT.md  SECURITY_AUDIT_V1.md  SECURITY_CHANGES.md  SECURITY_INVARIANTS.md  SELF_AUDIT_TEMPLATE.md  SIDE_CHANNEL_HARDENING.md  THREAT_MODEL.md  USAGE.md  Understanding the Tests in meow-decoder.md  core-modules.md  formal_coverage.md  formal_methods_report.md  protocol.md
examples/: README.md  basic_encode.py  demo_schrodinger.py  wasm_browser_example.html
formal/: README.md
formal/lean/: FountainCodes.lean  README.md  lakefile.lean
formal/proverif/: README.md  deadmans_switch_duress.pv  meow_encode.pv  run.sh
formal/tamarin/: MeowDuressEquiv.spthy  README.md  meow_deadmans_switch.spthy  meow_encode_equiv.spthy  run.sh
formal/tla/: MeowEncode.cfg  MeowEncode.tla  MeowFountain.cfg  MeowFountain.tla  README.md  run.sh  run_tlc.sh
fuzz/: README.md  __init__.py  afl_fuzz_manifest.py  fuzz_crypto.py  fuzz_fountain.py  fuzz_manifest.py  seed_corpus.py
meow_decoder/: __init__.py  ascii_qr.py  bidirectional.py  cat_utils.py  clowder_decode.py  clowder_encode.py  config.py  constant_time.py  crypto.py  crypto_DEBUG.py  crypto_backend.py  crypto_enhanced.py  deadmans_switch_cli.py  decode_gif.py  decode_webcam_with_resume.py  double_ratchet.py  duress_mode.py  encode.py  encode_DEBUG.py  entropy_boost.py  forward_secrecy.py  forward_secrecy_decoder.py  forward_secrecy_encoder.py  forward_secrecy_x25519.py  fountain.py  frame_mac.py  gif_handler.py  gui_logo_example.py  hardware_integration.py  hardware_keys.py  high_security.py  logo_eyes.py  meow_dashboard_demo.py  meow_gui_enhanced.py  metadata_obfuscation.py  multi_secret.py  ninja_cat_ultra.py  oppression_mode.py  pq_hybrid.py  pq_signatures.py  (+16 more)
meow_decoder/spec_v12/: __init__.py  decode.py  encode.py  key_management.py  multi_tier.py  steganography.py
mobile/: README.md
mobile/android/: MeowCrypto.kt
mobile/ios/: MeowCrypto.swift
rust_crypto/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust_crypto/src/: lib.rs
scripts/: ci.sh  cleanup_branches.sh  cleanup_redundant_tests.sh  complete_update.sh  docker_demo.py  push_changes.sh  run_formal_proofs.sh  stealth_build.py  verify_all.sh  verify_rust_backend.py
tests/: TEST_SUITE_README.md  conftest.py  debug_forward_secrecy.py  test_adversarial.py  test_ascii_qr.py  test_backend_parity.py  test_bidirectional.py  test_cat_utils.py  test_catnip_fountain.py  test_cli.py  test_cli_forward_secrecy.py  test_clowder.py  test_comprehensive.py  test_config_aggressive.py  test_constant_time.py  test_constant_time_aggressive.py  test_control_channel_bug.py  test_core_cli_decode_main.py  test_core_cli_encode_main.py  test_core_constant_time.py  test_core_coverage.py  test_core_decode_gif_more.py  test_core_encode_decode_unit.py  test_core_forward_secrecy_manager.py  test_core_frame_mac.py  test_core_gif_handler.py  test_core_gif_handler_more.py  test_core_metadata_obfuscation.py  test_core_metadata_obfuscation_more.py  test_core_qr_code_generator.py  test_core_qr_reader_unit.py  test_core_runpy_selftests.py  test_core_x25519_and_decoy_and_webcam.py  test_coverage.py  test_coverage_90_all_imports.py  test_coverage_90_backend.py  test_coverage_90_cli.py  test_coverage_90_config.py  test_coverage_90_constant_time.py  test_coverage_90_crypto.py  (+117 more)
tests/integration/: test_cli_forward_secrecy.py  test_comprehensive.py  test_forward_secrecy.py  test_forward_secrecy_integration.py  test_fountain_fix.py  test_fs_integration.py  test_full_roundtrip.py  test_schrodinger_e2e.py
tests/spec_v12/: test_spec_v12_core.py
