[package]
name = "crypto_core"
version = "0.2.0"
edition = "2021"
authors = ["Meow Decoder Team"]
description = "Formally verified cryptographic primitives for Meow-Encode with HSM, YubiKey, TPM support"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/meow-decoder"
keywords = ["cryptography", "aead", "verified", "security", "hsm", "yubikey", "tpm"]
categories = ["cryptography", "no-std", "hardware-support"]

# Suppress warnings for Verus formal verification cfg attributes and dead code
# Some code is only used during formal verification with Verus
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
dead_code = "allow"

[dependencies]
# AES-GCM implementation (pure Rust, constant-time)
aes-gcm = "0.10"

# Secure memory zeroization
zeroize = { version = "1.7", features = ["derive"] }

# Secure random number generation
getrandom = { version = "0.2", features = ["std"] }

# ============================================
# Core Crypto Dependencies (Pure Rust)
# ============================================

# X25519 key agreement (widely audited)
x25519-dalek = { version = "2.0", optional = true, features = ["static_secrets"] }

# Argon2id password hashing (memory-hard)
argon2 = { version = "0.5", optional = true }

# HKDF key derivation
hkdf = { version = "0.12", optional = true }

# SHA-2 family
sha2 = { version = "0.10", optional = true }

# HMAC
hmac = { version = "0.12", optional = true }

# ============================================
# EXPERIMENTAL: Post-Quantum Cryptography
# ============================================
# ⚠️  SECURITY WARNING: These crates are at release-candidate (0.1.0-rc) status.
# They implement FIPS 203 (ML-KEM) and FIPS 204 (ML-DSA) but have NOT received
# independent security audits or formal verification. Use the `pq-crypto` feature
# flag only for research or as defense-in-depth alongside classical crypto.
#
# DO NOT rely solely on PQ crypto for life-critical applications until:
# 1. Crates reach stable 1.0 release
# 2. Independent security audits are published
# 3. Side-channel resistance is verified
#
# Track upstream: https://github.com/RustCrypto/KEMs
#                 https://github.com/RustCrypto/signatures

# Post-Quantum: ML-KEM (FIPS 203) - EXPERIMENTAL  
# Using 0.3.0-pre for latest API (breaking changes from 0.1.x)
# `getrandom` feature enables system-RNG-based Generate/Encapsulate methods
# avoiding rand_core version mismatches between ecosystem crates
ml-kem = { version = "0.3.0-pre", optional = true, features = ["getrandom"] }

# Post-Quantum: ML-DSA / Dilithium (FIPS 204) - EXPERIMENTAL
# Using 0.1.0-rc.4 (latest stable-ish release)
ml-dsa = { version = "0.1.0-rc.4", optional = true }

# KEM traits for ml-kem (Generate, Encapsulate, Decapsulate)
# Must match version expected by ml-kem (0.3.0-rc.2)
kem = { version = "0.3.0-rc.2", optional = true }

# ============================================
# ALTERNATIVE: liboqs (Open Quantum Safe) Native Bindings
# ============================================
# ⚠️  liboqs requires system library installation:
#     - Ubuntu: apt install liboqs-dev
#     - macOS: brew install liboqs
#     - Build from source: https://github.com/open-quantum-safe/liboqs
#
# liboqs provides battle-tested reference implementations from OQS project.
# Use `liboqs-native` feature for this backend instead of `pq-crypto`.
# Both backends provide identical API via `crypto_core::pure_crypto::pq::*`
#
# Comparison:
# - ml-kem/ml-dsa: Pure Rust, easy build, experimental (0.1.0-rc)
# - oqs: C library, requires system deps, more mature

oqs = { version = "0.10", optional = true }

# Constant-time operations
subtle = { version = "2.5", optional = true }

# Random number generation traits
rand_core = { version = "0.6", optional = true }

# ============================================
# Hardware Security Dependencies
# ============================================

# PKCS#11 / HSM support (Cryptoki binding)
cryptoki = { version = "0.6", optional = true }

# YubiKey PIV support
yubikey = { version = "0.8", optional = true, features = ["untested"] }

# TPM 2.0 support (tss-esapi)
tss-esapi = { version = "7.5", optional = true }

# FIDO2/WebAuthn support
ctap-hid-fido2 = { version = "3.5", optional = true }

# ============================================
# WASM Support
# ============================================

# WASM bindings
wasm-bindgen = { version = "0.2", optional = true }

# WASM-compatible getrandom
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Async test runtime (for hardware tests)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Hex encoding for test vectors
hex = "0.4"

[features]
# ============================================
# Feature Flags (Modular Compilation)
# ============================================

# Default: std + pure crypto (no hardware deps)
default = ["std", "pure-crypto"]

# Standard library support
std = ["getrandom/std"]

# No-std support for embedded
no_std = []

# Verus formal verification mode
verus = []

# ============================================
# Pure Rust Crypto Features
# ============================================

# Full pure-Rust crypto suite
pure-crypto = [
    "x25519-dalek",
    "argon2",
    "hkdf",
    "sha2",
    "hmac",
    "subtle",
    "rand_core",
]

# Post-quantum cryptography (RustCrypto ml-kem/ml-dsa - pure Rust)
pq-crypto = [
    "ml-kem",
    "ml-dsa",
    "kem",
    "pure-crypto",
]

# Post-quantum cryptography (liboqs native bindings - requires system lib)
# ⚠️  Requires liboqs system library: apt install liboqs-dev
liboqs-native = [
    "oqs",
    "pure-crypto",
]

# ============================================
# Hardware Security Features
# ============================================

# HSM/PKCS#11 support
hsm = ["cryptoki", "std"]

# YubiKey PIV + FIDO2 support
yubikey = ["dep:yubikey", "ctap-hid-fido2", "std"]

# TPM 2.0 support
tpm = ["tss-esapi", "std"]

# All hardware features
hardware-full = ["hsm", "yubikey", "tpm"]

# ============================================
# WASM Target
# ============================================

# WebAssembly compilation target
wasm = ["wasm-bindgen", "pure-crypto"]

# ============================================
# Meta Features
# ============================================

# Everything except hardware (for cross-compilation)
full-software = ["pure-crypto", "pq-crypto"]

# Everything (requires native platform)
full = ["full-software", "hardware-full"]

[profile.release]
# Optimize for size and security
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Keep debug assertions for security checks
debug-assertions = true
overflow-checks = true

[lib]
# Enable cdylib for WASM
crate-type = ["lib", "cdylib"]

[[test]]
name = "hsm_integration"
path = "tests/hsm_integration.rs"
required-features = ["hsm"]

[[test]]
name = "yubikey_integration"
path = "tests/yubikey_integration.rs"
required-features = ["yubikey"]

[[test]]
name = "tpm_integration"
path = "tests/tpm_integration.rs"
required-features = ["tpm"]
